# guitarfretboard

./: .gitignore  README.md  app.py  chord_demo.py  example.py  pyproject.toml  requirements.txt
guitarfretboard/: __init__.py  arpeggios.py  chords.py  cli.py  core.py  notes.py  renderer_svg.py  scales.py  themes.py
web/: main.py
web/static/: app.js  styles.css
web/templates/: index.html
