[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guitarfretboard"
version = "1.2.0"
authors = [
  { name="patlegu" },
]
description = "Interactive Python toolkit for generating SVG guitar fretboards with real-time chord detection and musical intelligence."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "cairosvg",
    "fastapi",
    "uvicorn",
    "jinja2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]
guitarfretboard = "guitarfretboard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["guitarfretboard*"]
